--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/x-icon" href="/images/favicon-16x16.png">
 	</head>
 	<body class="is-preload">
 
@@ -34,6 +35,11 @@
 						   business analyst, and data analyst. I decided to focus on data analytics when I saw a growing 
 						   need for data driven decision making. This is where I discovered my passion for pulling data, analysing it, 
 						   modeling it, and creating effective dashboards.</p>
+						<p>Data skills: Analysis, ingestion, transformation, modelling (Kimball), visualisation <br />
+						   Languages: SQL, Python, Power Query, DAX <br />
+						   Technologies: Power BI, DataIku, Presto, Power Automate, Excel <br />
+						   Tools: Jira, Git/Stash, Confluence, Visual Studio Code
+						</p>
 						<!--<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
