--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="/images/favicon-16x16.png">
+		<link rel="icon" type="image/x-icon" href="images/favicon-16x16.png">
 	</head>
 	<body class="is-preload">
 
@@ -34,7 +34,7 @@
 						<p>Hi there! I'm a data professional that loves all things data. In my career I have worked as a software developer, 
 						   business analyst, and data analyst. I decided to focus on data analytics when I saw a growing 
 						   need for data driven decision making. This is where I discovered my passion for pulling data, analysing it, 
-						   modeling it, and creating effective dashboards.</p>
+						   modelling it, and creating effective dashboards.</p>
 						<p>Data skills: Analysis, ingestion, transformation, modelling (Kimball), visualisation <br />
 						   Languages: SQL, Python, Power Query, DAX <br />
 						   Technologies: Power BI, DataIku, Presto, Power Automate, Excel <br />
