--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- One -->
 					<section id="one">
 						<h1>About Me</h1>
-						<p>Hi there! I'm a data professional that loves all things data. In my career I have worked as a software developer, 
+						<p>Hi there! I'm a data professional who loves all things data. In my career I have worked as a software developer, 
 						   business analyst, and data analyst. I decided to focus on data analytics when I saw a growing 
 						   need for data driven decision making. This is where I discovered my passion for pulling data, analysing it, 
 						   modelling it, and creating effective dashboards.</p>
