--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
 				<!-- One -->
 					<section id="one">
 						<h1>About Me</h1>
-						<p>Hi there! I'm a data professional who loves all things data. In my career I have worked as a software developer, 
-						   business analyst, and data analyst. I decided to focus on data analytics when I saw a growing 
-						   need for data driven decision making. This is where I discovered my passion for pulling data, analysing it, 
-						   modelling it, and creating effective dashboards.</p>
-						<p>Data skills: Analysis, ingestion, transformation, modelling (Kimball), visualisation <br />
-						   Languages: SQL, Python, Power Query, DAX <br />
-						   Technologies: Power BI, DataIku, Presto, Power Automate, Excel <br />
-						   Tools: Jira, Git/Stash, Confluence, Visual Studio Code
+						<p>Hi there! I'm a data professional with 10+ years of experience working on data and technology projects. 
+						   I am results-driven and focused on solving business problems with data.​</p>
+						<p>Data Analysis: Microsoft Excel, SQL, Python<br />
+						   Data Visualisation: Power BI, Microsoft Excel, Python<br />
+						   Tools: Jira, Git/Bitbucket, Confluence, Visual Studio Code, DataIku
 						</p>
 						<!--<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
