--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
-						<li><a href="https://www.linkedin.com/in/matthewlynchsydney/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mattlynchbi/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto: matthew.lynch@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					Connect with me
