--- a/fx_dashboard.html
+++ b/fx_dashboard.html
@@ -33,13 +33,18 @@
 										<div class="col-11">
 											<span class="image fit">
 												<a href="https://app.powerbi.com/view?r=eyJrIjoiZjdkMjZhNjItZjJkOS00YTJiLWExMzUtMWNjMWRkYzgyMmE2IiwidCI6IjgxN2MyYWY5LTcyNzAtNDBjYy1hNDVhLWJhOGNhY2FhMWFiMSJ9" target="_blank">
-												<img src="images/fx_dashboard.png" alt="" title="Click to launch report in new tab" style="padding: 10px 10px 10px 10px" /></a>
+												<img src="images/fx_dashboard.png" alt="" style="padding: 10px 10px 10px 10px" /></a>
 											</span>
+										</div>
+									</div>
+									<div class="row gtr-uniform">
+										<div class="col-11">
+										<p>Click the image above to launch the interactive dashboard.</p>
 										</div>
 									</div>
 								</div>
 								<h2>Background</h2>
-								<p>This is a <a href="https://app.powerbi.com/view?r=eyJrIjoiZjdkMjZhNjItZjJkOS00YTJiLWExMzUtMWNjMWRkYzgyMmE2IiwidCI6IjgxN2MyYWY5LTcyNzAtNDBjYy1hNDVhLWJhOGNhY2FhMWFiMSJ9" target="_blank">sales dashboard</a> for a fictitious global FX trading business. The underlying data was randomly
+								<p>This is a sales dashboard for a fictitious global FX trading business. The underlying data was randomly
 								generated using Python code. <br /> 
 								The purpose of the dashboard is to help management track performance of the business and understand client
 								activity. <br />
