--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 										over ten years and am experienced with ingesting, transforming, and visualising
 										data.</p>
 										<p>I use SQL, Python, and Power BI for my data projects and am continually
-										learning new tools, tricks, and techniques in the dynamic and exciting world 
-										of data.</p>
+										learning new tools and techniques in the dynamic world of data.</p>
 									</div>
 									<span class="image"><img src="images/profile.jpg" alt="" /></span>
 								</div>
