--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 									</div>
 									<span class="image"><img src="images/profile.jpg" alt="" /></span>
 								</div>
-								<span class="image"><img src="images/career_timeline.png" alt="" /></span>
+								<span class="image"><img src="images/career_timeline.png" alt="" 
+														srcset="images/career_timeline.png 730w,
+																images/pic01.jpg 318w"
+														sizes="(min-width: 730px) 730px, 100vw"/>
+								</span>
 							</section>
 
 						<!-- Areas of Interest Section -->
