--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</div>
 								<span class="image"><img src="images/career_timeline.png" alt="" 
 														srcset="images/career_timeline.png 730w,
-																images/pic01.jpg 318w"
+																images/career_timeline_450px.png 450w"
 														sizes="(min-width: 730px) 730px, 100vw"/>
 								</span>
 							</section>
