--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 									<span class="image"><img src="images/profile.jpg" alt="" /></span>
 								</div>
 								<span class="image"><img src="images/career_timeline.png" alt="" 
-														srcset="images/career_timeline.png 730w,
-																images/career_timeline_450px.png 450w"
-														sizes="(min-width: 730px) 730px, 100vw"/>
+														srcset="images/career_timeline.png 730w"
+														sizes="(min-width: 900px) 730px, 75vw"/>
 								</span>
 							</section>
 
