Minor text changes

--- a/fx_dashboard.html
+++ b/fx_dashboard.html
@@ -56,8 +56,8 @@
 
 								<h2>Power BI Techniques</h2>
 								<ul>
-									<li>Integrated page navigation bar and backgrounds created using a graphics editor.</li>
-									<li>Integrated filter pane that can be open and closed.</li>
+									<li>Integrated page navigation bar and backgrounds created using Figma.</li>
+									<li>Integrated filter panel that can be open and closed.</li>
 									<li>Field parameters to change the metrics displayed in visuals based on user selection.</li>
 									<li>The monthly time series bar chart is a custom visual created using Deneb (vega-lite).</li>
 									<li>Dynamic SVG images are used to show the trend lines in the KPI cards and the bullet bars in the table visuals.</li>
